--- a/styles/miscstyle.css
+++ b/styles/miscstyle.css
@@ -20,6 +20,7 @@ min-height: 100vh
 }
 
 .navbar{display: none}
+.navbar details{list-style: none}
 
 .sidebar{width: min(160px, 20vw);
 border-right: solid var(--dark-gray) 4px;
