--- a/styles/style.css
+++ b/styles/style.css
@@ -2,11 +2,11 @@
 body{
 /* Colors */
 --white:      #f0f0f0;
---dark-gray:  #404040;
---light-gray: #d4d4d4;
+--black:  #202020;
+--light-gray: #808080;
 
 background-color: var(--white);
-color: var(--dark-gray);
+color: var(--black);
 
 font-family: 'Inter', sans-serif;
 font-size: 1rem;
@@ -29,9 +29,9 @@ height: 100vh; position: sticky; top: 0}
 padding: 24px;
 max-width: 35rem}
 
-ul{padding-left: 20px; list-style-type: "└ "}
+ul{padding-left: 20px; list-style-type: "- "}
 
-a{color: var(--dark-gray); 
+a{color: var(--black); 
     transition: all 0.2s cubic-bezier(.08,.82,.17,1)}
 a:hover{background-color: var(--dark-gray); color: var(--white);
 text-decoration-color: var(--dark-gray)}
