--- a/styles/style.css
+++ b/styles/style.css
@@ -51,8 +51,7 @@ details[open] summary ~ * {
 /* Mobile (width < 600px) */
 @media only screen and (max-width: 600px) {
     body{display: inline-block;
-    width: 100vw; height: 100vh;
-    background-color: var(--light-gray);}
+    width: 100vw; height: 100vh;}
 
     .sidebar{display: none}
 
