--- a/styles/style.css
+++ b/styles/style.css
@@ -17,4 +17,6 @@ margin: 0;
 min-height: 100vh
 }
 
+h1{font-size: min(7.2vw, 3rem); line-height: 3.25rem}
+
 ul{padding-left: 20px; list-style-type: "- "}
