--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@ margin: 0;
 min-height: 100vh
 }
 
-h1{font-size: min(7.2vw, 3rem); line-height: 3.25rem; padding: 8px 0 16px}
+h1{font-size: min(7.2vw, 3rem); line-height: 3.25rem; margin: 8px 0 16px}
 
 ul{padding-left: 20px; list-style-type: "- "}
 
