--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ color: var(--black);
 
 font-family: 'Work Sans', sans-serif;
 font-size: 1rem;
-line-height: 1.25rem;
+line-height: 1.2;
 
 display: flex;
 margin: 0;
