--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@ body{
 /* Colors */
 --white:      #f0f0f0;
 --black:  #202020;
---light-gray: #808080;
+--light-gray: #a0a0a0;
 
 background-color: var(--white);
 color: var(--black);
