--- a/styles/style.css
+++ b/styles/style.css
@@ -17,12 +17,11 @@ margin: 0;
 min-height: 100vh
 }
 
-h1{font-size: min(7.2vw, 3rem); margin: 8px 0 16px}
+h1{font-size: min(6.5vw, 2.9rem); margin: 8px 0 16px}
 
 ul{padding-left: 20px; list-style-type: "- "}
 
-a{color: var(--black); 
-  transition: all 0.2s cubic-bezier(.08,.82,.17,1)}
+a{color: var(--black); }
 a:hover{background-color: var(--black); color: var(--white);
 text-decoration-color: var(--black)}
 
