--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@ height: 100vh; position: sticky; top: 0}
 .sidebar div{margin: 24px; margin-right: 0; width: fit-content}
 
 .main{flex: 1;
-padding: 24px;
+padding: 0 16px;
 max-width: 35rem}
 
 h1{font-size: min(8vw, 3rem); line-height: 1.2; margin: 0}
