--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,7 @@ details[open] summary ~ * {
     margin: 0 auto;
     min-height: 100vh}
     .sidebar{display: none}
-    .navbar{display:inline-block; border-bottom: solid var(--light-gray) 2px; padding-bottom: 16px}
+    .navbar{display:inline-block; width: 100%; border-bottom: solid var(--light-gray) 2px; padding-bottom: 10px}
     .main{padding: 0 16px; margin: 0;
     min-height: calc(100vh - 32px);
     background-color: var(--white)}
