--- a/styles/sitestyle.css
+++ b/styles/sitestyle.css
@@ -6,57 +6,16 @@ body{
   --light-blue: #1d1838;
   
   background-color: var(--dark-blue);
-  color: var(--yellow);
-  
-  font-family: 'Marmelad', sans-serif;
-  font-size: 1.1rem;
-  line-height: 1.5;
-  
-  display: flex;
-  margin: 0;
-  min-height: 100vh
-  }
+  color: var(--yellow);}
 
-.navbar{display: none}
+.sidebar{border-right-color: var(--light-blue)}
 
-.sidebar{width: min(160px, 20vw);
-background-color: var(--light-blue);
-height: 100vh; position: sticky; top: 0}
-.sidebar ul{margin-top: 0}
-.sidebar div{margin: 24px; margin-right: 0; width: fit-content}
-
-.main{flex: 1;
-padding: 24px;
-max-width: 35rem}
-
-ul{padding-left: 20px; list-style-type: "└ "}
-p, ul{line-height: 1.4; margin-bottom: 0; font-size: 1rem}
-
-a{color: var(--yellow); 
-    transition: all 0.2s cubic-bezier(.08,.82,.17,1)}
+a{color: var(--yellow); }
 a:hover{background-color: var(--yellow); color: var(--dark-blue);
 text-decoration-color: var(--yellow)}
 
-h1{font-size: min(8vw, 3rem); margin: 0; line-height: 1.2; font-weight: bold}
-h2{font-size: 1.2rem}
-
-
 /* Mobile (width < 600px) */
 @media only screen and (max-width: 600px) {
-    body{display: inline-block;
-    width: 100vw; height: 100vh;
-    background-color: var(--light-blue);}
+  .navbar{border-bottom-color: var(--light-blue)}
 
-    .sidebar{display: none}
-
-    .navbar{display:inline-block}
-
-    .main{padding: 16px 24px; margin: 0 16px; 
-    min-height: calc(100vh - 32px);
-    background-color: var(--dark-blue)}
-
-}
-
-@media only screen and (max-width: 800px) {
-  .sidebar div{margin: 24px auto}
 }
