--- a/styles/sitestyle.css
+++ b/styles/sitestyle.css
@@ -3,7 +3,7 @@ body{
   /* Colors */
   --yellow:     #f2cf68;
   --dark-blue:  #020013;
-  --light-blue: #1d1838;
+  --light-blue: #4B3E84;
   
   background-color: var(--dark-blue);
   color: var(--yellow);}
