--- a/styles/sitestyle.css
+++ b/styles/sitestyle.css
@@ -14,6 +14,8 @@ a{color: var(--yellow); }
 a:hover{background-color: var(--yellow); color: var(--dark-blue);
 text-decoration-color: var(--yellow)}
 
+h2{font-size: 1.25rem}
+
 /* Mobile (width < 600px) */
 @media only screen and (max-width: 600px) {
   .navbar{border-bottom-color: var(--light-blue)}
