--- a/styles/sitestyle.css
+++ b/styles/sitestyle.css
@@ -15,6 +15,7 @@ a:hover{background-color: var(--yellow); color: var(--dark-blue);
 text-decoration-color: var(--yellow)}
 
 h2{font-size: 1.25rem}
+h2 a{text-decoration-thickness: 2px}
 
 /* Mobile (width < 600px) */
 @media only screen and (max-width: 600px) {
