--- a/styles/sitestyle.css
+++ b/styles/sitestyle.css
@@ -16,6 +16,7 @@ text-decoration-color: var(--yellow)}
 
 h2{font-size: 1.25rem}
 h2 a{text-decoration-thickness: 2px}
+h2::before{content: "- "}
 
 /* Mobile (width < 600px) */
 @media only screen and (max-width: 600px) {
