--- a/styles/sitestyle.css
+++ b/styles/sitestyle.css
@@ -8,7 +8,7 @@ body{
   background-color: var(--dark-blue);
   color: var(--yellow);}
 
-::selection{background-color: var(--dark-blue); color: var(--yellow)}
+::selection{background-color: var(--yellow); color: var(--dark-blue)}
 
 .sidebar{border-right-color: var(--light-blue)}
 
