--- a/style.css
+++ b/style.css
@@ -11,8 +11,10 @@ font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Noto Sans', 'Droid Sa
 font-size: 1.125rem;
 line-height: 1.2;
 
-margin: 0;
-min-height: 100vh
+margin: 0 auto;
+padding-top: 16px;
+min-height: 100vh;
+width: min(calc(100vw - 32px), 35rem);
 }
 
 ::selection{background-color: var(--black); color: var(--white)}
