--- a/style.css
+++ b/style.css
@@ -8,13 +8,15 @@ background-color: var(--white);
 color: var(--black);
 
 font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Noto Sans', 'Droid Sans', 'Segoe UI', 'Liberation Sans', sans-serif; 
-font-size: 1.125rem;
+font-size: 1rem;
 line-height: 1.2;
 
 margin: 0 auto;
 padding-top: 16px;
 min-height: 100vh;
-width: min(calc(100vw - 32px), 35rem);
+width: min(100vw, 35rem);
+border-right: solid var(--gray) 2px;
+border-left: solid var(--gray) 2px;
 }
 
 ::selection{background-color: var(--black); color: var(--white)}
