--- a/styles/miscstyle.css
+++ b/styles/miscstyle.css
@@ -3,72 +3,27 @@ body{
 /* Colors */
 --black:      #080808;
 --white:      #f0f0f0;
---dark-gray:  #404040;
---light-gray: #808080;
+--dark-green: #0c7403;
 --green:      #15c405;
 
 background-color: var(--black);
 color: var(--white);
 
-font-family: 'Space Grotesk', sans-serif;
-font-size: 1rem;
-line-height: 1.5;
+font-family: 'Space Grotesk', sans-serif;}
 
-display: flex;
-margin: 0;
-min-height: 100vh
-}
-
-.navbar{display: none}
-.navbar details{list-style: none}
-
-.sidebar{width: min(160px, 20vw);
-border-right: solid var(--dark-gray) 4px;
-height: 100vh; position: sticky; top: 0}
-.sidebar ul{margin-top: 0}
-.sidebar div{margin: 24px; width: fit-content}
-
-.main{flex: 1;
-padding: 24px;
-max-width: 35rem}
+.sidebar, .navbar{border-color: var(--dark-green)}
 
 p, ul{line-height: 1.4; margin-bottom: 0}
-ul{padding-left: 20px; list-style-type: "> "}
+ul{list-style-type: "> "}
 
-a{color: var(--white); text-decoration-color: var(--light-gray);
-text-decoration-thickness: 2px;
-font-style: italic;}
-a:hover{color: var(--green);
-text-decoration-color: var(--green)}
+a{color: var(--green); text-decoration-color: var(--green)}
+a:hover{color: var(--black);
+text-decoration-color: var(--green); background-color: var(--green);}
 
-h1{
-  margin: 0;
-  font-weight: bold;
-  font-size: 2.5rem;
-  line-height: 1.2;
+h1{font-size: 2.5rem;
   text-decoration: underline;
   text-decoration-color: var(--green);
   text-decoration-thickness: 4px}
 h1:before{content: "> "; color: var(--green)}
 h2{font-size: 1.5rem}
 h2:before{content: "- "; color: var(--green);}
-
-/* Mobile (width < 600px) */
-@media only screen and (max-width: 600px) {
-    body{display: inline-block;
-    width: 100vw; height: 100vh}
-
-    .sidebar{display: none}
-
-    .navbar{display:inline-block}
-
-    .main{padding: 16px 24px; margin: 0 16px; 
-    border-right: solid var(--dark-gray) 4px;
-    border-left: solid var(--dark-gray) 4px;
-    min-height: calc(100vh - 32px)}
-
-}
-
-@media only screen and (max-width: 800px) {
-  .sidebar div{margin: 24px auto}
-}
