--- a/styles/miscstyle.css
+++ b/styles/miscstyle.css
@@ -1,6 +1,4 @@
-/* Desktop (width > 600px) */
 body{
-/* Colors */
 --black:      #080808;
 --white:      #f0f0f0;
 --dark-green: #0c7403;
@@ -9,11 +7,11 @@ body{
 background-color: var(--black);
 color: var(--white);
 
-font-family: 'Space Grotesk', sans-serif;}
+font-family: 'Space Grotesk', sans-serif;
+line-height: 1.4rem}
 
 .sidebar, .navbar{border-color: var(--dark-green)}
 
-p, ul{line-height: 1.4; margin-bottom: 0}
 ul{list-style-type: "> "}
 
 a{color: var(--green); text-decoration-color: var(--green)}
