--- a/styles/miscstyle.css
+++ b/styles/miscstyle.css
@@ -10,6 +10,8 @@ color: var(--white);
 font-family: 'Space Grotesk', sans-serif;
 line-height: 1.4rem}
 
+.sidebar, .navbar{border-color: #808080}
+
 ul{list-style-type: "> "}
 
 a{color: var(--green); text-decoration-color: var(--green)}
