--- a/misc/folder/doodles/istyle.css
+++ b/misc/folder/doodles/istyle.css
@@ -1,7 +1,7 @@
 body {
   background-color: #fafbff;
   color: #080808;
-  font-family: 'Libre Baskerville', serif;
+  font-family: 'Crimson Pro', serif;
   line-height: 1.5;
   display: flex; 
   flex-direction: row; 
