--- a/misc/folder/doodles/istyle.css
+++ b/misc/folder/doodles/istyle.css
@@ -1,12 +1,12 @@
 body {
   background-color: #fafbff;
   color: #080808;
-  font-family: 'Libre Baskerville', serif;
-  line-height: 1.5;
+  font-family: 'Crimson Pro', serif;
+  line-height: 1.25;
   display: flex; 
   flex-direction: row; 
   margin: 0px;
-  font-size: large}
+  font-size: 1.25rem}
 a{font-weight: bold; color: #080808; text-decoration-color:#5d5e6c;font-style: italic; text-decoration-thickness: 2px;}
 a:hover{text-decoration-color:#080808;}
 a.button::after, a.button::before{content:""}
