--- a/misc/folder/indexes/oldstyle.css
+++ b/misc/folder/indexes/oldstyle.css
@@ -8,7 +8,7 @@ body{
 background-color: var(--white);
 color: var(--black);
 
-font-family: 'Work Sans', sans-serif;
+font-family: 'Inter', sans-serif;
 font-size: 1rem;
 line-height: 1.25rem;
 
