--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@ body{
 background-color: var(--white);
 color: var(--black);
 
-font-family: 'Work Sans', sans-serif; 
+font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Noto Sans', 'Droid Sans', 'Segoe UI', 'Liberation Sans', sans-serif; 
 font-size: 1rem;
 line-height: 1.2;
 
