--- a/styles/miscstyle.css
+++ b/styles/miscstyle.css
@@ -5,8 +5,7 @@ body{
 --green:      #15c405;
 
 background-color: var(--black);
-color: var(--white);
-line-height: 1.4rem}
+color: var(--white)}
 
 .sidebar, .navbar{border-color: #808080}
 
