--- a/misc/style.css
+++ b/misc/style.css
@@ -13,8 +13,8 @@ font-family: 'Space Grotesk', sans-serif; line-height: 1.25}
 .main{max-width: 40rem;
     margin: 16px max(min(10rem, calc((100vw - 40rem) / 2)), 24px) 0}
 
-.cmain{.main{max-width: 40rem;
-    margin: 16px max(calc((100vw - 40rem) / 2), 24px) 24px}}
+.cmain{max-width: 40rem;
+    margin: 16px max(calc((100vw - 40rem) / 2), 24px) 24px}
 
 ul{list-style-type: "> "}
 
