--- a/misc/style.css
+++ b/misc/style.css
@@ -25,7 +25,8 @@ text-decoration-color: var(--green); background-color: var(--green);}
 h1{font-size: 2.5rem;
 text-decoration: underline;
 text-decoration-color: var(--green);
-text-decoration-thickness: 4px}
+text-decoration-thickness: 4px;
+margin-bottom: 8px}
 h1:before{content: "> "; color: var(--green)}
 h2{font-size: 1.5rem}
 h2:before{content: "- "; color: var(--green);}
