--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ body{--black: #080808;
 .main{max-width: 40rem;
      margin: 16px max(min(10rem, calc((100vw - 40rem) / 2)), 24px) 0}
 
+.cmain{max-width: 40rem;
+     margin: 16px max(calc((100vw - 40rem) / 2), 24px) 24px}
+
 h1{margin: 0}
 
 ul{padding-left: 20px; list-style-type: "- "; margin: 8px 0 16px}
