--- a/style.css
+++ b/style.css
@@ -1,28 +1,28 @@
-body{--black: #080808;
-     --grey:  #444;
-     --white: #f0f0f0;
-     background-color: var(--white); color: var(--black);
+body{background-color: var(--back); color: var(--text);
      font-size: 1.0625rem;
      font-family: 'Work Sans', sans-serif;
-     margin: 0}
+     margin: 0;
+     min-height: 100vh;}
 
-::selection{background-color: var(--black); color: var(--white)}
+::selection{background-color: var(--color); color: var(--back)}
 
 .main{max-width: 40rem;
      margin: 16px max(min(10rem, calc((100vw - 40rem) / 2)), 24px) 0}
 
-.cmain{max-width: 40rem;
-     margin: 16px max(calc((100vw - 40rem) / 2), 24px) 24px}
+.cmain, .title{max-width: 40rem;
+     margin: 0 max(calc((100vw - 40rem) / 2), 24px) 24px}
 
-h1{margin: 0}
+.title{background-color: var(--back); position: sticky; top: 0; padding-top: 16px}
+
+h1{margin: 0; text-shadow: var(--shadow) 3px 3px}
 
 ul{padding-left: 20px; list-style-type: "- "; margin: 8px 0 16px}
 
 p{max-width: 40rem}
 
-a{color: var(--black); }
-a:hover{background-color: var(--black); color: var(--white);
-text-decoration-color: var(--black)}
+a{color: var(--color); }
+a:hover{background-color: var(--color); color: var(--back);
+text-decoration-color: var(--color)}
 
 summary{font-weight: bold;}
 
