--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{background-color: var(--back); color: var(--text);
 .cmain, .ctitle{max-width: 40rem;
      margin: 0 max(calc((100vw - 40rem) / 2), 24px) 24px}
 
-.title{background-color: var(--back); position: sticky; top: 0; padding-top: 16px}
+.title, .ctitle{background-color: var(--back); position: sticky; top: 0; padding-top: 16px}
 
 h1{margin: 0; text-shadow: var(--shadow) 3px 3px; font-size: min(10vw, 2.5rem)}
 h2{font-size: 1.25rem; margin-bottom: 0}
