--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h2{font-size: 1.25rem; margin-bottom: 0}
 
 ul{padding-left: 20px; list-style-type: "- "; margin: 8px 0 16px}
 
-p{max-width: 40rem}
+p{max-width: 40rem; line-height: 1.3}
 
 a{color: var(--color); }
 a:hover{background-color: var(--color); color: var(--back);
