--- a/style.css
+++ b/style.css
@@ -21,9 +21,8 @@ ul{padding-left: 20px; list-style-type: "- "; margin: 8px 0 16px}
 
 p{max-width: 40rem; line-height: 1.3; margin: 0}
 
-a{color: var(--color); }
-a:hover{background-color: var(--color); color: var(--back);
-text-decoration-color: var(--color)}
+a{color: var(--text); text-decoration-color: var(--color);}
+a:hover{color: var(--color)}
 
 summary{font-weight: bold;}
 
