--- a/misc/folder/other/toki-pona/style.css
+++ b/misc/folder/other/toki-pona/style.css
@@ -53,7 +53,7 @@ to   {opacity: 1; transform: translateY(0)}
     src: url('linjalipamanka-normal.woff');
 }
 
-.sp{font-family:'linja lipamanka'}
+.sitelen-pona{font-family:'linja lipamanka'}
 .phrase{font-size:1.5rem;margin: 24px 0; 
     border-left: solid 1px var(--shadow); 
     padding: 8px 0 8px 16px; width: fit-content}
