--- a/misc/folder/other/toki-pona/style.css
+++ b/misc/folder/other/toki-pona/style.css
@@ -58,7 +58,7 @@ to   {opacity: 1; transform: translateY(0)}
     border-left: solid 1px var(--shadow); 
     padding: 8px 0 8px 16px; width: fit-content}
 .phrase .latin{font-weight: bold; color: var(--color); display: inline}
-.phrase .sitelen-pona{margin-left: 8px; font-weight:bold; display: inline}
+.phrase .sitelen-pona{margin-left: 8px; font-weight:bold; display: inline; font-size: 2rem}
 .phrase .meaning{font-size: 1.125rem;color: #8585a4; margin-left: 8px}
 
 .phrase .latin .s, .phrase .latin .v, .phrase .latin .o{
