--- a/misc/folder/other/toki-pona/style.css
+++ b/misc/folder/other/toki-pona/style.css
@@ -54,9 +54,9 @@ to   {opacity: 1; transform: translateY(0)}
 }
 
 .sitelen-pona{font-family:'linja lipamanka'}
-.phrase{font-size:1.5rem;margin: 24px 0; 
+.phrase{font-size:min(1.5rem, 5vw);margin: 24px 0; 
     border-left: solid 1px var(--shadow); 
     padding: 8px 0 8px 16px; width: fit-content}
 .phrase .latin{font-weight: bold; color: var(--color); display: inline}
-.phrase .sitelen-pona{margin-left: 8px; font-weight:bold; display: inline; font-size: 2rem}
+.phrase .sitelen-pona{margin-left: 8px; font-weight:bold; display: inline; font-size: min(2rem, 8vw)}
 .phrase .meaning{font-size: 1.125rem;color: #8585a4; margin-left: 8px}
