--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@
 }
 
 body{background-color: var(--back); color: var(--text);
-    font-size: 1.0625rem;
+    font-size: 1.25rem;
     font-family: 'Work Sans', sans-serif;
-    margin: 0;
+    margin: 0; font-weight: 450;
     min-height: 100vh;}
 
 ::selection{background-color: var(--color); color: var(--back)}
