--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'Work Sans';
-    src: url(./fonts/WorkSans[wght].ttf);
+    src: url(./assets/WorkSans[wght].ttf);
 }
 @font-face {
     font-family: 'Inconsolata';
-    src: url(./fonts/Inconsolata-VariableFont_wdth\,wght.ttf);
+    src: url(./assets/Inconsolata-VariableFont_wdth\,wght.ttf);
 }
 
 body{background-color: var(--back); color: var(--text);
