--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'Work Sans';
-    src: url(/website/assets/WorkSans[wght].ttf);
+    src: url(assets/WorkSans[wght].ttf);
 }
 @font-face {
     font-family: 'Inconsolata';
-    src: url(/website/assets/Inconsolata-VariableFont_wdth\,wght.ttf);
+    src: url(assets/Inconsolata-VariableFont_wdth\,wght.ttf);
 }
 
 body{background-color: var(--back); color: var(--text);
@@ -26,7 +26,7 @@ h1, h2{font-family: 'Inconsolata', monospace;}
 h1{margin: 0; text-shadow: var(--shadow) 3px 3px; font-size: min(13vw, 3rem)}
 h2{font-size: 1.25rem; margin-bottom: 0}
 
-ul{padding-left: 20px; list-style-type: "- "; margin: 8px 0 16px}
+ul{padding-left: 20px; list-style-type: "→ "; margin: 8px 0 16px}
 
 p{max-width: 40rem; line-height: 1.3; margin: 0}
 
@@ -35,18 +35,15 @@ a:hover{color: var(--color)}
 
 h2 a, h3 a{text-decoration-thickness: 2px}
 
-summary{font-weight: bold;}
+summary{font-weight: bold; padding-bottom: 8px; 
+    border-bottom: solid var(--color) 1px; 
+    transition: all .5s cubic-bezier(.08,.82,.17,1);
+    list-style-type: "→ ";}
+summary::marker{font-weight: normal; transition: all .5s cubic-bezier(.08,.82,.17,1)}
 
-details{padding: 8px 16px; border: solid 1px var(--shadow); width: fit-content;
-    transition: all .5s cubic-bezier(.08,.82,.17,1)}
-details:hover, details[open]{background-color: var(--details);}
+details[open] summary ~ * {animation: sweep .5s cubic-bezier(.08,.82,.17,1);}
 
-details[open] summary ~ * {
-animation: sweep .5s cubic-bezier(.08,.82,.17,1);}
-
-details[open] > summary {
-    border-bottom: dashed 1px var(--shadow); padding-bottom: 8px; margin-bottom: 8px
-}
+details[open] > summary {margin-bottom: 16px; list-style-type: "↓ "}
 
 @keyframes sweep {
 from {opacity: 0; transform: translateY(-0.5rem);}
