--- a/style.css
+++ b/style.css
@@ -7,11 +7,16 @@
     src: url(assets/Inconsolata-VariableFont_wdth\,wght.ttf);
 }
 
+*{transition: all .5s cubic-bezier(.08,.82,.17,1);}
+
 body{background-color: var(--back); color: var(--text);
     font-size: 1.0625rem;
     font-family: 'Work Sans', sans-serif;
     margin: 0; font-weight: 450;
-    min-height: 100vh;}
+    min-height: 100vh;
+}
+
+b{font-weight: 700}
 
 ::selection{background-color: var(--color); color: var(--back)}
 
@@ -27,6 +32,7 @@ h1{margin: 0; text-shadow: var(--shadow) 3px 3px; font-size: min(13vw, 3rem)}
 h2{font-size: 1.25rem; margin-bottom: 0}
 
 ul{padding-left: 20px; list-style-type: "→ "; margin: 8px 0 16px}
+li{margin: 4px 0}
 
 p{max-width: 40rem; line-height: 1.3; margin: 0}
 
@@ -37,9 +43,8 @@ h2 a, h3 a{text-decoration-thickness: 2px}
 
 summary{font-weight: bold; padding-bottom: 8px; 
     border-bottom: solid var(--color) 1px; 
-    transition: all .5s cubic-bezier(.08,.82,.17,1);
     list-style-type: "→ ";}
-summary::marker{font-weight: normal; transition: all .5s cubic-bezier(.08,.82,.17,1)}
+summary::marker{font-weight: normal}
 
 details[open] summary ~ * {animation: sweep .5s cubic-bezier(.08,.82,.17,1);}
 
