--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@
 }
 
 body{background-color: var(--back); color: var(--text);
-    font-size: 1.0625rem;
+    font-size: 1rem;
     font-family: 'Uncut Sans', sans-serif;
     margin: 0;
     min-height: 100vh;}
@@ -89,9 +89,12 @@ letter-spacing: -.06em;}
     margin: 0 max(min(10rem, calc((100vw - 40rem) / 2)), 24px);
     }
 
-nav{background-color: var(--back); position: sticky; top: 0; padding-bottom: 16px;
+nav{background-color: var(--back); position: sticky; top: 0; padding: 14px 0;
 border-bottom: solid var(--text) 1px; box-shadow: 0 5px 5px var(--back)}
 .space{display:inline-block; width: 2rem}
+
+nav a{text-decoration: none; color: var(--color)}
+nav a:hover{color: var(--text)}
 
 h1{position: relative; margin: 0; 
     font-size: min(10vw, 2.5rem); 
