--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
 body{background-color: var(--back); color: var(--text);
     font-size: 1rem;
     font-family: 'Uncut Sans', sans-serif;
-    margin: 0;
+    margin: 0 0 24px;
     min-height: 100vh;}
 
 ::selection{background-color: var(--color); color: var(--back)}
