--- a/doodles/style.css
+++ b/doodles/style.css
@@ -12,3 +12,4 @@
 body{font-family: 'c059', serif;}
 h1::before{content:'{'; color: var(--color)}
 h1::after{content:'}'; color: var(--color)}
+h1{margin-top: 8px}
