--- a/style.css
+++ b/style.css
@@ -44,16 +44,16 @@ body{background-color: var(--back); color: var(--text);
 
 ::selection{background-color: var(--color); color: var(--back)}
 
-main, h1, nav{max-width: 40rem; padding-top: 16px;
+main, h1, nav.top{max-width: 40rem; padding-top: 16px;
     margin: 0 max(min(10rem, calc((100vw - 40rem) / 2)), 24px);
     }
 
-nav{background-color: var(--back); position: sticky; top: 0; padding: 14px 0;
+nav.top{background-color: var(--back); position: sticky; top: 0; padding: 14px 0;
 border-bottom: solid var(--text) 1px; box-shadow: 0 5px 5px var(--back)}
 .space{display:inline-block; width: 2rem}
 
-nav a{text-decoration: none; color: var(--color)}
-nav a:hover{color: var(--text)}
+nav.top a{text-decoration: none; color: var(--color)}
+nav.top a:hover{color: var(--text)}
 
 h1{position: relative;  
     font-size: min(10vw, 2.5rem); 
