--- a/style.css
+++ b/style.css
@@ -1,96 +1,36 @@
 @font-face {
-    font-family: 'Uncut Sans';
-    font-weight: normal;
-    src: url(assets/Uncut-Sans-Regular.otf);
-    font-feature-settings: 'ss04', 'ss03', 'ss01';
-}
-@font-face {
-    font-family: 'Uncut Sans';
-    font-weight: bold;
-    src: url(assets/Uncut-Sans-Bold.otf);
-    font-feature-settings: 'ss04', 'ss03', 'ss01';
-}
-
-@font-face {
-    font-family: 'Iosevka';
-    font-weight: normal;
-    font-style: normal;
-    src: url(assets/Iosevka-Extended.woff2);
-}
-@font-face {
-    font-family: 'Iosevka';
-    font-weight: bold;
-    font-style: normal;
-    src: url(assets/Iosevka-ExtendedExtraBold.woff2);
-}
-@font-face {
-    font-family: 'Iosevka';
-    font-weight: normal;
-    font-style: italic;
-    src: url(assets/Iosevka-ExtendedItalic.woff2);
-}
-@font-face {
-    font-family: 'Iosevka';
-    font-weight: bold;
-    font-style: italic;
-    src: url(assets/Iosevka-ExtendedExtraBoldItalic.woff2);
-}
+    font-family: 'Inconsolata';
+    font-variation-settings: 'wdth' 112;
+    src: url(/website/fonts/Inconsolata-VariableFont_wdth\,wght.ttf);}
 
 body{background-color: var(--back); color: var(--text);
-    font-size: 1rem;
-    font-family: 'Uncut Sans', sans-serif;
-    margin: 0;
-    min-height: 100vh;}
+    display: flex; margin: 0; width: 100vw;
+    flex-direction: row; align-items: stretch}
 
-::selection{background-color: var(--color); color: var(--back)}
+main, header{max-width: 40rem}
+main{padding: 24px}
 
-main, h1, nav.top{max-width: 40rem; padding-top: 16px;
-    margin: 0 max(min(10rem, calc((100vw - 40rem) / 2)), 24px);
-    }
+header{border-right: solid 1px var(--color); align-self: flex-start;
+    position: sticky; top: 0; height: 100vh; text-align: right;
+    padding: 0 24px 0 max(min(48px, calc((100vw - 30rem) / 2)), 24px);}
 
-nav.top{background-color: var(--back); position: sticky; top: 0; padding: 14px 0;
-border-bottom: solid var(--text) 1px; box-shadow: 0 5px 5px var(--back)}
-.space{display:inline-block; width: 2rem}
+nav{display: flex; flex-direction: column; align-items: end; margin: 16px 0}
+nav a{display: block; width: fit-content}
 
-nav.top a{text-decoration: none; color: var(--color)}
-nav.top a:hover{color: var(--text)}
+p{margin: 0}
+h1{margin: 24px 0 0; line-height: 1.125}
+h1::before{content:"/"; color: var(--color); line-break: strict;}
 
-h1{position: relative;  
-    font-size: min(10vw, 2.5rem); 
-    line-height: 1; z-index: 1;}
-h2{font-size: 1.25rem; margin-bottom: 0}
-h1::before, h2::before{content: "→ "}
+::selection{background-color: var(--text); color: var(--back)}
 
-ul{padding-left: 20px; list-style-type: "- "; margin: 8px 0 16px}
+a{color: var(--text); transition: all .5s cubic-bezier(0,1,0,1); text-decoration-color: var(--color)}
+a:hover{background-color: var(--color); color: var(--back); text-decoration-color: none}
 
-p{max-width: 40rem; line-height: 1.3; margin: 0}
-
-a{color: var(--text); text-decoration-color: var(--color); transition: all .5s cubic-bezier(.08,.82,.17,1)}
-a:hover{color: var(--color)}
-
-h2 a, h3 a{text-decoration-thickness: 2px}
-
-summary{font-weight: bold; list-style-type: '→ ';
-    list-style-position: outside;
-    border-bottom: dotted 1px var(--text); 
-    padding-bottom: 8px; margin-bottom: 8px;}
-
-details{padding: 8px 0; margin-left: 20px}
-
-details, summary{transition: all .5s cubic-bezier(.08,.82,.17,1);}
-
-details[open] summary ~ * {
-animation: sweep .5s cubic-bezier(.08,.82,.17,1);}
-
-details[open] > summary {
-    list-style-type: '↓ ';
-}
-
-summary:hover, details[open] > summary{border-color: var(--color); color: var(--color)}
-
-@keyframes sweep {
-from {opacity: 0; transform: translateY(-0.5rem);}
-to   {opacity: 1; transform: translateY(0)}
-}
-
-textarea{font-family: 'Iosevka', monospace; font-size: .8em;}
+@media (max-width: var(--max)) {
+    body{display: block}
+    header{height:auto; border-right: none; border-bottom: solid 1px var(--color);
+        background-color: var(--back); text-align: left;
+        max-width: none; position:sticky; top: calc(-2em - 10px); padding: 0 24px}
+    main{max-width: 40rem}
+    nav{display:block;}
+    nav a{display: inline}}
