--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header{border-right: solid 1px var(--color); align-self: flex-start;
     position: sticky; top: 0; height: 100vh; text-align: right; max-width: 15rem;
     padding: 0 24px 0 max(min(48px, calc((100vw - 30rem) / 2)), 24px);}
 
-nav{display: flex; flex-direction: column; align-items: end; margin: 16px 0}
+nav{display: flex; flex-direction: column; align-items: end; margin: 16px 0; line-height: 1.5}
 nav a{display: block; width: fit-content}
 
 p{margin: 0}
