--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ header{border-right: solid 1px var(--color); align-self: flex-start;
     position: sticky; top: 0; height: 100vh; text-align: right; max-width: 15rem;
     padding: 0 24px 0 max(min(48px, calc((100vw - 30rem) / 2)), 24px);}
 
-nav{display: flex; flex-direction: column; align-items: end; margin: 16px 0; line-height: 1.5}
-nav a{display: block; width: fit-content}
+nav{display: flex; flex-direction: column; align-items: end; margin: 16px 0}
+nav a{display: block; width: fit-content; padding: 4px 6px;margin: 2px;}
 
 p{margin: 0}
 h1{margin: 24px 0 0; line-height: 1.125}
